# heatmiserV3

./: .gitignore  .travis.yml  CODEROWNERS  LICENSE  LICENSE.TXT  MANIFEST  README.md  build.py  pyproject.toml  requirements.txt  review.py  setup.cfg  setup.py  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-logic-led-development.md
examples/: get_dcb.py  get_temperature.py  set_temperature_tp_20.py
heatmiserV3/: .heatmiser.py.swp  __init__.py  config.yml  connection.py  constants.py  exceptions.py  heatmiser.py  protocol.py  prt.yml  uh1.py  wifi.py
heatmiserV3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
heatmiserV3/test/: test_heatmiser.py
heatmiserv3/: config.yml  config.yml.new  connection.py  crc16.py  formats.py  heatmiser.py  thermostat.py
hooks/: pre-commit
livetests/: test_live.py
schema/: README.md  dcb.schema.json  message.schema.json  reply.schema.json
schema/examples/: message.json
tests/: conftest.py  serial_stubs.py  test_config_meta_pdf_sync.py  test_connection.py  test_crc.py  test_dcb_index_details.py  test_dcb_index_individual.py  test_dcb_indexes.py  test_dcb_semantics_named.py  test_heatmiser.py  test_heatmiser_additional.py  test_heatmiser_prt.py  test_heatmiser_readers.py  test_stubs.py  test_uh1.py
tests/fixtures/: living-prt.json
tests/models/DT/: conftest.py  test_model_dt.py  test_model_dt_payload.py
tests/models/DT-E/: conftest.py  test_model_dt_e.py  test_model_dt_e_payload.py
tests/models/PRT/: test_model_prt.py
tests/models/PRT-E/: conftest.py  test_model_prt_e.py  test_model_prt_e_payload.py
tests/models/PRT-HW/: conftest.py  test_model_prt_hw.py  test_model_prt_hw_payload.py
tests/unit/: test_heatmiser.py
