[tool.poetry]
name = "heatmiserv3"
version = "2.0.4"
description = "A library to interact with Heatmiser Themostats using V3 protocol."
authors = ["Andy Loughran <andy@lockran.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
pyserial = "^3.5"
pyyaml = "^6.0.1"
importlib-resources = "^6.1.1"
pytest-cov = "^7.0.0"
pytest = "^9.0.2"


[tool.poetry.group.test.dependencies]
flake8 = "^7.0.0"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
