[project]
name = "heatmiserv3"
version = "2.0.6"
description = "A library to interact with Heatmiser Themostats using V3 protocol."
authors = [{ name = "Andy Loughran", email = "andy@lockran.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "appdirs>=1.4.4,<2",
    "pyserial>=3.5,<4",
    "pyyaml>=6.0.1,<7",
    "importlib-resources>=6.1.1,<7",
]

[dependency-groups]
test = [
    "flake8>=7.0.0,<8",
    "mock>=5.1.0,<6",
    "pytest-cov>=7.0.0,<8",
    "pytest>=9.0.2,<10",
]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
